add submit section and some edit in prev sections

--- a/index.html
+++ b/index.html
@@ -114,9 +114,13 @@
         </div>
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
-            <img src="./assets/images/spain.png" alt="" style="width: 50%" />
+            <img
+              src="./assets/images/united-states-of-america.png"
+              alt=""
+              style="width: 50%"
+            />
             <br /><br />
-            <span>Spain</span>
+            <span>USA</span>
           </div>
         </div>
       </div>
@@ -140,7 +144,7 @@
               style="width: 50%"
             />
             <br /><br />
-            <span>Entertaiment</span>
+            <span>Entertainment</span>
           </div>
         </div>
         <div class="col-md-3 col-6 my-1">
@@ -187,6 +191,19 @@
             <br /><br />
             <span>Sports</span>
           </div>
+        </div>
+      </div>
+
+      <div
+        class="m-2 p-2 row justify-content-around text-center hide"
+        id="submit-row"
+      >
+        <div class="col-md-4 col-5 my-1 w-100">
+          <p>selected country : not choosen</p>
+          <p>selected category : not choosen</p>
+          <button class="submit-btn w-100" id="sumbit-btn">
+            search for news
+          </button>
         </div>
       </div>
     </div>
