--- a/index.html
+++ b/index.html
@@ -201,13 +201,16 @@
         <div class="col-md-4 col-5 my-1 w-100">
           <p>selected country : not choosen</p>
           <p>selected category : not choosen</p>
-          <button class="submit-btn w-100" id="sumbit-btn">
+          <button class="submit-btn w-100" id="submit-btn">
             search for news
           </button>
         </div>
       </div>
-    </div>
 
+      <div class="m-2 p-2 row justify-content-center text-center" id="news-row">
+        <div class="col-md-4 col-6 my-1"></div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
