--- a/index.html
+++ b/index.html
@@ -207,9 +207,10 @@
         </div>
       </div>
 
-      <div class="m-2 p-2 row justify-content-center text-center" id="news-row">
-        <div class="col-md-4 col-6 my-1"></div>
-      </div>
+      <div
+        class="m-2 p-2 row justify-content-center align-items-center text-center hide"
+        id="news-row"
+      ></div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
