--- a/index.html
+++ b/index.html
@@ -4,51 +4,77 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- bootstrap css file -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <!-- bootstrap css file -->
 
+    <!-- bootstrap icon file -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css"
     />
+    <!-- bootstrap icon file -->
 
+    <!-- costum css file -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <!-- costum css file -->
+
     <title>News App</title>
   </head>
   <body>
     <div class="container">
+      <!-- tabs -->
       <div class="margin row justify-content-around text-center">
+        <h2 class="text-center mb-5">
+          Go to the tab you want and customize your news option
+        </h2>
+        <!-- tab title -->
         <h3 class="text-center mb-5" id="title">
           Choose the country want to see its news
         </h3>
+        <!-- tab title -->
+
+        <!-- tab -->
         <div class="col-4">
           <button class="tab active" id="country">
             <i class="bi bi-geo-alt icon"></i><br />
             Country
           </button>
         </div>
+        <!-- tab -->
+
+        <!-- tab -->
         <div class="col-4">
           <button class="tab deactive" id="category">
             <i class="bi bi-journals icon"></i><br />
             Category
           </button>
         </div>
+        <!-- tab -->
+
+        <!-- tab -->
         <div class="col-4">
           <button class="tab deactive" id="submit">
             <i class="bi bi-check-circle icon"></i> <br />
             Submit
           </button>
         </div>
+        <!-- tab -->
       </div>
+      <!-- tabs -->
 
+      <!-- countries -->
       <div
         class="m-2 p-2 row justify-content-around text-center show"
         id="countries-row1"
       >
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img
@@ -60,6 +86,9 @@
             <span>Argentina</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img src="./assets/images/france.png" alt="" style="width: 50%" />
@@ -67,6 +96,9 @@
             <span>France</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img src="./assets/images/germany.png" alt="" style="width: 50%" />
@@ -74,6 +106,9 @@
             <span>Germany</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img src="./assets/images/italy.png" alt="" style="width: 50%" />
@@ -81,12 +116,16 @@
             <span>Italy</span>
           </div>
         </div>
+        <!-- country -->
       </div>
+      <!-- countries -->
 
+      <!-- countries -->
       <div
         class="m-2 p-2 row justify-content-around text-center show"
         id="countries-row2"
       >
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img
@@ -98,6 +137,9 @@
             <span>UK</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img src="./assets/images/japan.png" alt="" style="width: 50%" />
@@ -105,6 +147,9 @@
             <span>Japan</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img src="./assets/images/portugal.png" alt="" style="width: 50%" />
@@ -112,6 +157,9 @@
             <span>Portugal</span>
           </div>
         </div>
+        <!-- country -->
+
+        <!-- country -->
         <div class="col-md-3 col-6 my-1">
           <div class="country data-box text-center p-2 deactive">
             <img
@@ -123,12 +171,16 @@
             <span>USA</span>
           </div>
         </div>
+        <!-- country -->
       </div>
+      <!-- countries -->
 
+      <!-- categories -->
       <div
         class="m-2 p-2 row justify-content-around text-center hide"
         id="categories-row1"
       >
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img src="./assets/images/business.png" alt="" style="width: 50%" />
@@ -136,6 +188,9 @@
             <span>Business</span>
           </div>
         </div>
+        <!-- category -->
+
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img
@@ -147,6 +202,9 @@
             <span>Entertainment</span>
           </div>
         </div>
+        <!-- category -->
+
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img src="./assets/images/general.png" alt="" style="width: 50%" />
@@ -154,6 +212,9 @@
             <span>General</span>
           </div>
         </div>
+        <!-- category -->
+
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img src="./assets/images/health.png" alt="" style="width: 50%" />
@@ -161,12 +222,16 @@
             <span>Health</span>
           </div>
         </div>
+        <!-- category -->
       </div>
+      <!-- categories -->
 
+      <!-- categories -->
       <div
         class="m-2 p-2 row justify-content-around text-center hide"
         id="categories-row2"
       >
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img src="./assets/images/science.png" alt="" style="width: 50%" />
@@ -174,6 +239,9 @@
             <span>Science</span>
           </div>
         </div>
+        <!-- category -->
+
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img
@@ -185,6 +253,9 @@
             <span>Technology</span>
           </div>
         </div>
+        <!-- category -->
+
+        <!-- category -->
         <div class="col-md-3 col-6 my-1">
           <div class="category data-box text-center p-2 deactive">
             <img src="./assets/images/sports.png" alt="" style="width: 50%" />
@@ -192,7 +263,9 @@
             <span>Sports</span>
           </div>
         </div>
+        <!-- category -->
       </div>
+      <!-- categories -->
 
       <div
         class="m-2 p-2 row justify-content-around text-center hide"
@@ -212,11 +285,17 @@
         id="news-row"
       ></div>
     </div>
+
+    <!-- bootstrap js file -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <!-- bootstrap js file -->
+
+    <!-- costume script file-->
     <script src="./scripts/script.js" type="module"></script>
+    <!-- costume script file-->
   </body>
 </html>
